--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <title>Development Forum</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=San+Francisco:wght@400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Development Forum</h1>
+        <h1>Vniverse Development Forum!</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Topics</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Contact!</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="forum">
-            <h2>Discuss Development Concepts</h2>
+            <h2>Discuss Development & tech Concepts!!!</h2>
             <div id="posts">
                 <!-- Posts will be dynamically added here -->
             </div>
@@ -32,9 +33,25 @@
         </section>
         <section id="userAccount">
             <h2>Welcome, Anonymous User</h2>
-            <img src="rainbow.png" alt="Rainbow" id="rainbowImage">
+            <h3>Your user logs won't be located our server or anywhere!
+                Feel being Anonymous and share your thoughts with the world!
+            </h3>
+            <img src="rainbow.png" alt="" id="rainbowImage">
         </section>
     </main>
+    <footer>
+        <div id="contacts">
+            <h3>Contact Us</h3>
+            <ul>
+                <li><a href="mailto:info@developmentforum.com">Email Us</a></li>
+                <li><a href="tel:+1234567890">Phone: +1234567890</a></li>
+                <li><a href="https://github.com/developmentforum" target="_blank">GitHub</a></li>
+                <li><a href="https://youtube.com/developmentforum" target="_blank">YouTube</a></li>
+                <li><a href="https://twitter.com/developmentforum" target="_blank">Twitter</a></li>
+                <li><a href="https://facebook.com/developmentforum" target="_blank">Facebook</a></li>
+            </ul>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
